Sanitize shiny-tile.css by breaking out index.css

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Shiny Tiles</title>
+        <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/shiny-tile.css">
     </head>
     <body>
@@ -16,21 +17,7 @@
                     </div>
                     <div class="shiny-tile-desc">
                         <div class="shiny-tile-title">Search Logs</div>
-                        <div class="shiny-tile-subtitle"></div>
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <div class="shiny-tile">
-            <a href="javascript:void(0)">
-                <div class="shiny-tile-inner">
-                    <div class="shiny-tile-icon">
-                        <i class="fas fa-plus"></i>
-                    </div>
-                    <div class="shiny-tile-desc">
-                        <div class="shiny-tile-title">Add to Cart</div>
-                        <div class="shiny-tile-subtitle">Meow meow meow!</div>
+                        <div class="shiny-tile-subtitle">Debug & monitor your applications</div>
                     </div>
                 </div>
             </a>
@@ -45,6 +32,20 @@
                     <div class="shiny-tile-desc">
                         <div class="shiny-tile-title">Upload Files</div>
                         <div class="shiny-tile-subtitle">Add files to the CDN</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="shiny-tile">
+            <a href="javascript:void(0)">
+                <div class="shiny-tile-inner">
+                    <div class="shiny-tile-icon">
+                        <i class="fas fa-plus"></i>
+                    </div>
+                    <div class="shiny-tile-desc">
+                        <div class="shiny-tile-title">Add a Kitty to your Cart</div>
+                        <div class="shiny-tile-subtitle">Meow meow meow!</div>
                     </div>
                 </div>
             </a>
